# Proiect-OOP

./: CMakeLists.txt  README.md  jucator.h  main.cpp  proprietate.h
fisiere/: alte_carti.txt  jucatori.txt  proprietate.txt
headers/: alt_spatiu.h  banca.h  bani_actiune.h  joc.h  jucator.h  proprietate.h  rlutil.h  spatiu_joc.h  spatiu_proprietate.h  zar.h
sources/: alt_spatiu.cpp  banca.cpp  bani_actiune.cpp  joc.cpp  jucator.cpp  proprietate.cpp  spatiu_joc.cpp  spatiu_proprietate.cpp  zar.cpp
